--- a/src/main/resources/templates/followersList.html
+++ b/src/main/resources/templates/followersList.html
@@ -24,8 +24,7 @@
         </ul>
       </nav>
     </header>
-
-    <div class="overflow-auto w-full">
+    <main class="overflow-auto">
       <div
         th:if="${followersList.size() == 0}"
         class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm"
@@ -93,7 +92,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </main>
     </footer>
   </body>
 </html>
