--- a/src/main/resources/templates/itemBase.html
+++ b/src/main/resources/templates/itemBase.html
@@ -37,7 +37,7 @@
         </ul>
       </nav>
     </header>
-
+    <main></main>
     <div th:id="'item-' + ${item.id}" class="profileContainerScroll bg-slate-200">
       <div class="h-auto w-full bg-white">
         <div class="collectionNavbar shadow-sm">
