--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,16 +34,16 @@
           <li>
             <a href="/index">
               <img
-                class="h-5"
-                src="/images/Shelved_Logo_White.png"
-                alt="Shelved Logo"
+              class="h-5"
+              src="/images/Shelved_Logo_White.png"
+              alt="Shelved Logo"
               />
             </a>
           </li>
         </ul>
       </nav>
     </header>
-    <div class="container bg-slate-200">
+    <main class="bg-slate-200">
       <div class="card">
         <div class="headerBox">
           <h1 class="formHeader">Login</h1>
@@ -98,6 +98,8 @@
           <a class="link" href="/signup">Sign Up</a>
         </form>
       </div>
-    </div>
+    </main>
+    <footer class="bg-slate-100">
+    </footer>
   </body>
 </html>
