--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -19,8 +19,8 @@
           </li>
         </ul>
       </nav>
-    </header> 
-    <div class="container bg-slate-200">
+    </header>
+    <main class="bg-slate-200">
       <div class="card">
         <div class="headerBox">
           <h1 class="formHeader">Sign Up</h1>
@@ -110,6 +110,8 @@
         </form>
 
       </div>
-    </div>
+    </main>
+    <footer class="bg-slate-100">
+    </footer>
   </body>
 </html>
