--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="/css/output.css" />
   </head>
 
-  <body class="flex flex-col h-screen w-full bg-orange-700 overflow-hidden">
+  <body class="overflow-hidden">
 
     <!-- Header -->
-    <header class="fixed top-0 h-12 w-full bg-orange-500 flex-shrink-0">
+    <header>
       <p class="text-center text-white text-lg font-bold">HEADER</p>
     </header>
   
     <!-- Main Content -->
-    <main class="flex flex-col flex-grow mt-12 mb-12 bg-red-500">
+    <main class="">
       <!-- ImageBox -->
       <div id="imageBox" class="aspect-square w-full bg-red-300 flex-shrink-0">
         <p class="text-center text-white text-lg font-bold">BIG IMAGE</p>
@@ -93,7 +93,7 @@
     </main>
   
     <!-- Footer -->
-    <footer class="fixed bottom-0 h-12 w-full bg-green-500 flex-shrink-0">
+    <footer class="">
       <p class="text-center text-white text-lg font-bold">FOOTER</p>
     </footer>
   
