--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -32,7 +32,7 @@
         </ul>
       </nav>
     </header>
-    <div th:id="'collection-' + ${collection.id}" class="profileContainerScroll overflow-y-auto bg-slate-200 h-full">
+    <main th:id="'collection-' + ${collection.id}" class="">
       <div class="h-auto w-full bg-slate-100">
         <div class="collectionNavbar shadow-sm">
           <div class="flex justify-between items-center w-full">
@@ -132,7 +132,7 @@
             </div>
           </div>
         </div>
-        <div id="itemGrid" class="w-full min-h-fit bg-white">
+        <div id="itemGrid" class="flex-grow h-56 w-full bg-white overflow-y-auto">
           <div class="grid bg-white">
             <div th:each="row : ${partitionedItems}" class="grid grid-cols-3 bg-white">
               <div th:each="item : ${row}" class="flex flex-col items-center bg-white">
@@ -148,7 +148,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer>
       <div class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center">
 
