--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
     <script src="/js/BackButton/visitedPages.js" defer></script>
   </head>
 
-  <body id="scrollablePage">
+  <body>
     <header>
       <nav class="navbar">
         <ul class="flex justify-between items-center w-full">
@@ -66,7 +66,7 @@
       </nav>
     </header>
 
-    <div class="overflow-auto w-full bg-slate-200">
+    <main class="overflow-auto w-full bg-slate-200">
       <div th:if="${collections.size == 0}">
         <div
           class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm"
@@ -302,7 +302,7 @@
           <!-- END OF COLLECTION CONTAINER -->
         </div>
       </div>
-    </div>
+    </main>
     <footer>
       <div
         class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
