--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -24,229 +24,245 @@
           <li class="flex items-center">
             <div th:if="${isOwner != null && isOwner}">
               <a
-              class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
-              id="redirectUpdateItemDetails"
-              th:href="@{/update-item/{itemId}(itemId=${item?.id})}"
-            >
-              <span class="text-lg">&#9776;</span>
-            </a>
+                class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
+                id="redirectUpdateItemDetails"
+                th:href="@{/update-item/{itemId}(itemId=${item?.id})}"
+              >
+                <span class="text-lg">&#9776;</span>
+              </a>
             </div>
           </li>
         </ul>
       </nav>
     </header>
-    <div
-      th:id="'item-' + ${item.id}"
-      class="profileContainerScroll bg-slate-200"
-    >
-      <div class="h-auto w-full bg-white">
-        <div class="collectionNavbar shadow-sm">
-          <div class="flex justify-between items-center w-full">
-            <ul class="flex justify-start items-center w-full">
-              <li class="pr-2">
-                <a
-                  th:href="@{/collection/{collectionId}(collectionId=${collection?.id})}"
-                >
-                  <img
-                    class="h-7 w-7 rounded-full bg-white"
-                    th:src="${collection?.imageUrl ?: '/item_image.png'}"
-                    alt="Profile Picture"
-                  />
-                </a>
-              </li>
-              <li>
-                <a
-                  th:href="@{/collection/{collectionId}(collectionId=${collection?.id})}"
-                >
-                  <span
-                    class="text-sm font-semibold"
-                    th:if="${collection?.title!= null}"
-                    th:text="${collection?.title}"
-                  ></span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- ITEM CONTENT -->
-        <div class="flex flex-col justify-center items-center border-size-0">
-          <div class="image-container relative bg-white">
-            <!-- ITEM PICTURE -->
-            <a>
-              <img
-                class="aspect-square w-full bg-white"
-                id="previewImage"
-                th:src="${item != null && item.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
-                alt="Item Image"
-              />
-            </a>
-
-            <!-- Overlay -->
-            <div
-              id="itemOverlay"
-              class="overlay absolute bottom-0 left-0 w-full h-full bg-black bg-opacity-70 text-white text-sm p-2 hidden"
-            >
-              <div class="flex flex-col justify-start items-between">
-                <div>
-                  <span class="font-semibold" th:text="${item?.title}"></span>
-                </div>
-                <div>
-                  <span
-                    class="text-xs font-thin"
-                    th:text="${item?.description}"
-                  ></span>
-                </div>
-              </div>
-              <div>
-                <button
-                  class="absolute bottom-2 left-2 bg-blue-500 hover:bg-blue-700 text-xs px-2 py-1 rounded"
-                  id="openLinkButton"
-                  th:href="${item?.itemLink}"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  Item Link
-                </button>
-              </div>
-            </div>
-
-            <!-- Toggle Button -->
-            <button
-              id="toggleButtonShowInfo"
-              class="toggle-overlay absolute bottom-2 right-2 bg-white text-black text-xs px-2 py-1 rounded z-20"
-            >
-              Show Info
-            </button>
-            <button
-              id="toggleButtonHideInfo"
-              class="toggle-overlay absolute bottom-2 right-2 bg-white text-black text-xs px-2 py-1 rounded z-20 hidden"
-            >
-              Hide Info
-            </button>
-          </div>
-
-          <div class="w-full px-2 bg-white">
-            <div
-              class="flex flex-row justify-between w-full h-auto py-1 text-sm"
-            >
-              <ul class="flex flex-row justify-start items-center pr-2">
-                <li class="flex flex-row justify-start items-center pr-2">
-                  <div class="flex justify-start items-center">
-                    <form
-                      th:if="${item?.id != null}"
-                      th:action="@{/items/{id}/like(id=${item?.id})}"
-                      method="post"
-                    >
-                      <input
-                        type="hidden"
-                        name="itemId"
-                        th:value="${item.id}"
-                      />
-                      <input
-                        type="hidden"
-                        name="userId"
-                        th:value="${user.id}"
-                      />
-                      <input
-                        type="hidden"
-                        name="liked"
-                        th:value="${item.isLiked}"
-                      />
-                      <button
-                        type="submit"
-                        class="likeButton"
-                        th:if="${item.userId != user.id}"
-                      >
-                        <span class="pr-2 font-medium" th:if="${isLiked}">
-                          &#9829;
-                        </span>
-                        <span class="pr-2 font-medium" th:if="${!isLiked}">
-                          &#9825;
-                        </span>
-                      </button>
-                      <button
-                        type="button"
-                        class="likeButton"
-                        th:if="${item.userId == user.id}"
-                        disabled
-                      >
-                        <span class="pr-2 font-medium">&#9829;</span>
-                      </button>
-                    </form>
-                  </div>
-                  <div class="flex justify-start items-center">
-                    <p class="font-thin" th:text="${likeCount}"></p>
-                  </div>
-                </li>
-                <li class="flex flex-row justify-start items-center pr-2">
-                  <a th:href="@{/item/{id}/comments(id=${item?.id})}" >
-                    <span class="pr-2 font-medium">comment</span>
+    <main class="overflow-auto">
+      <div
+        th:if="${item != null && item.imageUrl == null}"
+        class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm"
+      >
+        <span class="text-sm font-semibold">No image available</span>
+      </div>
+      <div
+        th:id="'item-' + ${item.id}"
+        class="profileContainerScroll bg-slate-200"
+      >
+        <div class="h-auto w-full bg-white">
+          <div class="collectionNavbar shadow-sm">
+            <div class="flex justify-between items-center w-full">
+              <ul class="flex justify-start items-center w-full">
+                <li class="pr-2">
+                  <a
+                    th:href="@{/collection/{collectionId}(collectionId=${collection?.id})}"
+                  >
+                    <img
+                      class="h-7 w-7 rounded-full bg-white"
+                      th:src="${collection?.imageUrl ?: '/item_image.png'}"
+                      alt="Profile Picture"
+                    />
                   </a>
-                  <span class="font-thin" th:text="${item.commentCount}"></span>
+                </li>
+                <li>
+                  <a
+                    th:href="@{/collection/{collectionId}(collectionId=${collection?.id})}"
+                  >
+                    <span
+                      class="text-sm font-semibold"
+                      th:if="${collection?.title!= null}"
+                      th:text="${collection?.title}"
+                    ></span>
+                  </a>
                 </li>
               </ul>
             </div>
-            <div class="w-full h-auto flex justify-start items-center text-sm">
-              <!-- CAPTION -->
-              <p
-                id="toggle_truncate"
-                class="truncate-multiline leading-[1rem]"
-                onclick="toggleTruncate(this)"
-              >
+          </div>
+          <!-- ITEM CONTENT -->
+          <div class="flex flex-col justify-center items-center border-size-0">
+            <div class="image-container relative bg-white">
+              <!-- ITEM PICTURE -->
+              <a>
+                <img
+                  class="aspect-square w-full bg-white"
+                  id="previewImage"
+                  th:src="${item != null && item.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
+                  alt="Item Image"
+                />
+              </a>
 
-                <a th:href="@{/profile/{id}(id=${userProfile?.id})}">
-                  <span
-                    class="font-semibold"
-                    th:if="${userProfile?.username != null}"
-                    th:text="${userProfile?.username}"
-                  ></span>
-                </a>
-                <span
-                  th:if="${item?.caption != null}"
-                  th:text="${item?.caption}"
-                ></span>
-              </p>
+              <!-- Overlay -->
+              <div
+                id="itemOverlay"
+                class="overlay absolute bottom-0 left-0 w-full h-full bg-black bg-opacity-70 text-white text-sm p-2 hidden"
+              >
+                <div class="flex flex-col justify-start items-between">
+                  <div>
+                    <span class="font-semibold" th:text="${item?.title}"></span>
+                  </div>
+                  <div>
+                    <span
+                      class="text-xs font-thin"
+                      th:text="${item?.description}"
+                    ></span>
+                  </div>
+                </div>
+                <div>
+                  <button
+                    class="absolute bottom-2 left-2 bg-blue-500 hover:bg-blue-700 text-xs px-2 py-1 rounded"
+                    id="openLinkButton"
+                    th:href="${item?.itemLink}"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    Item Link
+                  </button>
+                </div>
+              </div>
+
+              <!-- Toggle Button -->
+              <button
+                id="toggleButtonShowInfo"
+                class="toggle-overlay absolute bottom-2 right-2 bg-white text-black text-xs px-2 py-1 rounded z-20"
+              >
+                Show Info
+              </button>
+              <button
+                id="toggleButtonHideInfo"
+                class="toggle-overlay absolute bottom-2 right-2 bg-white text-black text-xs px-2 py-1 rounded z-20 hidden"
+              >
+                Hide Info
+              </button>
             </div>
-            <div class="w-full flex justify-between items-center py-1">
-              <!-- MONTH YEAR -->
-              <div class="w-full flex flex-col justify-center items-start pt-1">
-                <span
-                  style="font-size: 9px"
-                  class="font-extralight"
-                  th:if="${item?.updatedAt != null}"
-                  th:text="${#dates.format(item?.updatedAt, 'MMMM-YYYY')}"
-                ></span>
+
+            <div class="w-full px-2 bg-white">
+              <div
+                class="flex flex-row justify-between w-full h-auto py-1 text-sm"
+              >
+                <ul class="flex flex-row justify-start items-center pr-2">
+                  <li class="flex flex-row justify-start items-center pr-2">
+                    <div class="flex justify-start items-center">
+                      <form
+                        th:if="${item?.id != null}"
+                        th:action="@{/items/{id}/like(id=${item?.id})}"
+                        method="post"
+                      >
+                        <input
+                          type="hidden"
+                          name="itemId"
+                          th:value="${item.id}"
+                        />
+                        <input
+                          type="hidden"
+                          name="userId"
+                          th:value="${user.id}"
+                        />
+                        <input
+                          type="hidden"
+                          name="liked"
+                          th:value="${item.isLiked}"
+                        />
+                        <button
+                          type="submit"
+                          class="likeButton"
+                          th:if="${item.userId != user.id}"
+                        >
+                          <span class="pr-2 font-medium" th:if="${isLiked}">
+                            &#9829;
+                          </span>
+                          <span class="pr-2 font-medium" th:if="${!isLiked}">
+                            &#9825;
+                          </span>
+                        </button>
+                        <button
+                          type="button"
+                          class="likeButton"
+                          th:if="${item.userId == user.id}"
+                          disabled
+                        >
+                          <span class="pr-2 font-medium">&#9829;</span>
+                        </button>
+                      </form>
+                    </div>
+                    <div class="flex justify-start items-center">
+                      <p class="font-thin" th:text="${likeCount}"></p>
+                    </div>
+                  </li>
+                  <li class="flex flex-row justify-start items-center pr-2">
+                    <a th:href="@{/item/{id}/comments(id=${item?.id})}">
+                      <span class="pr-2 font-medium">comment</span>
+                    </a>
+                    <span
+                      class="font-thin"
+                      th:text="${item.commentCount}"
+                    ></span>
+                  </li>
+                </ul>
+              </div>
+              <div
+                class="w-full h-auto flex justify-start items-center text-sm"
+              >
+                <!-- CAPTION -->
+                <p
+                  id="toggle_truncate"
+                  class="truncate-multiline leading-[1rem]"
+                  onclick="toggleTruncate(this)"
+                >
+                  <a th:href="@{/profile/{id}(id=${userProfile?.id})}">
+                    <span
+                      class="font-semibold"
+                      th:if="${userProfile?.username != null}"
+                      th:text="${userProfile?.username}"
+                    ></span>
+                  </a>
+                  <span
+                    th:if="${item?.caption != null}"
+                    th:text="${item?.caption}"
+                  ></span>
+                </p>
+              </div>
+              <div class="w-full flex justify-between items-center py-1">
+                <!-- MONTH YEAR -->
+                <div
+                  class="w-full flex flex-col justify-center items-start pt-1"
+                >
+                  <span
+                    style="font-size: 9px"
+                    class="font-extralight"
+                    th:if="${item?.updatedAt != null}"
+                    th:text="${#dates.format(item?.updatedAt, 'MMMM-YYYY')}"
+                  ></span>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="relative scroll-none">
-          <!-- Items Grid -->
-          <div id="itemGrid" class="w-full min-h-fit overflow-hidden"></div>
+          <div class="relative scroll-none">
+            <!-- Items Grid -->
+            <div id="itemGrid" class="w-full min-h-fit overflow-hidden"></div>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer>
       <div id="footerNavContent" class="footerNav w-full">
         <div th:if="${isOwner != null && isOwner}" class="w-full">
           <!-- Footer for owner -->
-          <ul class="flex justify-between items-center w-full" id="footerNavOwner">
+          <ul
+            class="flex justify-between items-center w-full"
+            id="footerNavOwner"
+          >
             <li>
-              <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
+              <div
+                id="homeButton"
+                class="h-4 w-4 flex items-center justify-center"
+              >
                 <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/popular">
-                  &#10066;
-                </a>
+                <a class="text-2xl font-bold" href="/popular">&#10066;</a>
               </div>
             </li>
             <li>
-              <div class="h-4 w-4 flex items-center justify-center">
-
-              </div>
+              <div class="h-4 w-4 flex items-center justify-center"></div>
             </li>
             <li>
               <a href="/profile">
@@ -259,15 +275,16 @@
             </li>
           </ul>
         </div>
-        
+
         <div th:if="${isOwner != null && !isOwner}" class="w-full">
           <!-- Footer for non-owner -->
-          <ul class="flex justify-between items-center w-full" id="footerNavUser">
+          <ul
+            class="flex justify-between items-center w-full"
+            id="footerNavUser"
+          >
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/index">
-                  &#8962;
-                </a>
+                <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
             <li>
