--- a/src/main/resources/templates/itemComment.html
+++ b/src/main/resources/templates/itemComment.html
@@ -38,7 +38,7 @@
     </script>
   </head>
 
-  <body>
+  <body class="flex flex-col h-screen w-full bg-orange-700">
     <header>
       <nav class="navbar">
         <ul class="flex justify-between w-full">
@@ -62,9 +62,9 @@
       </nav>
     </header>
 
-    <div th:id="'item-' + ${item.id}"  class="profileContainerScroll bg-slate-200 h-full">
+    <main th:id="'item-' + ${item.id}">
       <!-- ITEM NAV -->
-      <div class="h-auto w-full bg-white">
+      <div class="h-auto w-full bg-slate-100">
         <div class="collectionNavbar shadow-sm">
           <div class="flex justify-between items-center w-full">
             <ul class="flex justify-start items-center w-full">
@@ -231,115 +231,107 @@
         </div>
       </div>
       
-        <!-- Comment Box -->
-        <div
-          th:if="${item?.id != null}"
-          class="w-full bg-slate-50 py-3"
-          th:value="${item.id}"
-          id="commentBox"
-        >
-          <!-- Comment Template -->
-          <div th:id="'comment-' + ${comment.id}" class="px-3 pt-1 pb-2" th:each="comment : ${item.comments}">
+      <!-- Comment Box -->
+      <div
+        id="commentBox"
+        th:value="${item.id}"
+        class="flex-grow h-56 w-full bg-slate-100 overflow-y-auto"
+      >
+        <!-- Comment Template -->
+        <div th:id="'comment-' + ${comment.id}" class="px-3 pt-1 pb-2" th:each="comment : ${item.comments}">
+          <div
+            th:id="'comment-' + ${comment.id}"
+            class="w-full h-auto flex flex-col justify-start items-start">
+          <div class="w-full flex flex-row justify-start items-start" >
+            <!-- Profile Picture -->
+            <div id="imageBoxComment" class="flex-shrink-0 w-10">
+              <a th:href="@{/profile/{userId}(userId=${comment.user?.id})}">
+                <img
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${comment.user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
+              </a>
+            </div>
+
+            <!-- Content Box -->
             <div
-              th:id="'comment-' + ${comment.id}"
-              class="w-full h-auto flex flex-col justify-start items-start">
-            <div class="w-full flex flex-row justify-start items-start" >
-              <!-- Profile Picture -->
-              <div id="imageBoxComment" class="flex-shrink-0 w-10">
-                <a th:href="@{/profile/{userId}(userId=${comment.user?.id})}">
-                  <img
-                    class="h-7 w-7 rounded-full bg-white"
-                    th:src="${comment.user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
-                    alt="Profile Picture"
-                  />
-                </a>
-              </div>
-
-              <!-- Content Box -->
-              <div
-                id="contentBoxComment"
-                class="flex flex-col items-start w-full"
-              >
-                <div class="flex flex-row justify-start items-start w-full">
-                  <!-- Profile Link -->
-                  <div class="flex items-start">
-                    <a th:href="@{/profile/{userId}(userId=${comment.user?.id})}" class="flex items-start">
-                      <span
-                        style="font-size: 10px; line-height: 1"
-                        class="font-semibold leading-[1]"
-                        th:if="${comment.user?.username != null}"
-                        th:text="${comment.user?.username}"
-                      ></span>
-                    </a>
-                  </div>
-
-                  <!-- Time Container -->
-                  <div class="pl-2 flex items-end">
+              id="contentBoxComment"
+              class="flex flex-col items-start w-full"
+            >
+              <div class="flex flex-row justify-start items-start w-full">
+                <!-- Profile Link -->
+                <div class="flex items-start">
+                  <a th:href="@{/profile/{userId}(userId=${comment.user?.id})}" class="flex items-start">
                     <span
-                      style="font-size: 8px; line-height: 1"
-                      class="font-thin leading-[1]"
-
-                    >
-                    6h
-                    </span>
-                  </div>
-                </div>
-
-                <div class="flex flex-row justify-start items-start text-sm">
-                  <span
-                  class="font-light truncate-multiline"
-                  onclick="toggleTruncate(this)"
-                  th:text="${comment.content}"
-                ></span>
-                </div>
-
-                <div
-                  style="font-size: 8px; line-height: 1"
-                  class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
-                >
-                  <a id="replyButton" class="cursor-pointer">
-                    <span class="leading-[1.2]">Reply</span>
+                      style="font-size: 10px; line-height: 1"
+                      class="font-semibold leading-[1]"
+                      th:if="${comment.user?.username != null}"
+                      th:text="${comment.user?.username}"
+                    ></span>
                   </a>
                 </div>
 
-<!-- REPLY BOX GOES HERE -->
+                <!-- Time Container -->
+                <div class="pl-2 flex items-end">
+                  <span
+                    style="font-size: 8px; line-height: 1"
+                    class="font-thin leading-[1]"
 
-
-            </div>
-            <!-- Like Box -->
-            <div
-              th:id="'likeBox-' + ${comment.id}"
-              class="flex flex-col justify-start items-center"
-            >
-                <div class="flex flex-row justify-center items-center">
-                  <form th:if="${comment?.id != null}" th:action="@{/comments/{id}/like(id=${comment?.id})}" method="post">
-                    <input type="hidden" name="commentId" th:value="${comment.id}" />
-                    <input type="hidden" name="userId" th:value="${user.id}" />
-                    <input type="hidden" name="liked" th:value="${comment.isLiked}" />
-                    <button type="submit" class="likeButton" th:if="${comment.user != null && comment.user.id != user.id}">
-                      <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${comment.isLiked}">&#9829;</span>
-                      <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${!comment.isLiked}">&#9825;</span>
-                    </button>
-                    <button th:id="'like-button-' + ${comment.id}" type="button" class="likeButton" th:if="${comment.user != null && comment.user.id == user.id}" disabled>
-                      <span style="font-size: 10px; line-height: 1" class="font-medium text-xs">&#9829;</span>
-                    </button>
-                  </form>
-                </div>
-                <div class="flex flex-row justify-center items-center">
-                  <p  id="'likeCount' + ${comment.id}"
-                      style="font-size: 10px; line-height: 1"
-                      class="font-thin text-xs" th:text="${comment.likeCount}"></p>
+                  >
+                  6h
+                  </span>
                 </div>
               </div>
+
+              <div class="flex flex-row justify-start items-start text-sm">
+                <span
+                class="font-light truncate-multiline"
+                onclick="toggleTruncate(this)"
+                th:text="${comment.content}"
+              ></span>
+              </div>
+
+              <div
+                style="font-size: 8px; line-height: 1"
+                class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
+              >
+                <a id="replyButton" class="cursor-pointer">
+                  <span class="leading-[1.2]">Reply</span>
+                </a>
+              </div>
+          <!-- REPLY BOX GOES HERE -->
+          </div>
+          <!-- Like Box -->
+          <div
+            th:id="'likeBox-' + ${comment.id}"
+            class="flex flex-col justify-start items-center"
+          >
+              <div class="flex flex-row justify-center items-center">
+                <form th:if="${comment?.id != null}" th:action="@{/comments/{id}/like(id=${comment?.id})}" method="post">
+                  <input type="hidden" name="commentId" th:value="${comment.id}" />
+                  <input type="hidden" name="userId" th:value="${user.id}" />
+                  <input type="hidden" name="liked" th:value="${comment.isLiked}" />
+                  <button type="submit" class="likeButton" th:if="${comment.user != null && comment.user.id != user.id}">
+                    <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${comment.isLiked}">&#9829;</span>
+                    <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${!comment.isLiked}">&#9825;</span>
+                  </button>
+                  <button th:id="'like-button-' + ${comment.id}" type="button" class="likeButton" th:if="${comment.user != null && comment.user.id == user.id}" disabled>
+                    <span style="font-size: 10px; line-height: 1" class="font-medium text-xs">&#9829;</span>
+                  </button>
+                </form>
+              </div>
+              <div class="flex flex-row justify-center items-center">
+                <p  id="'likeCount' + ${comment.id}"
+                    style="font-size: 10px; line-height: 1"
+                    class="font-thin text-xs" th:text="${comment.likeCount}"></p>
+              </div>
             </div>
-            </div>
+          </div>
           </div>
         </div>
       </div>
-
-
-      
-    </div>
+    </main>
     <footer>
         <div id="commentActivity" class="commentNav">
           <div id="commentInputContainer" class="w-full">
