--- a/src/main/resources/templates/popular.html
+++ b/src/main/resources/templates/popular.html
@@ -26,7 +26,7 @@
         </ul>
       </nav>
     </header>
-    <div class="profileContainerScroll">
+    <main class="overflow-y-auto">
       <div class="search-container w-full p-2">
         <input
           type="text"
@@ -118,9 +118,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer>
-      <div
+      <dm
         class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
       >
         <div class="footerNav">
@@ -153,7 +153,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </main>
     </footer>
   </body>
 </html>
