--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -38,7 +38,7 @@
         </ul>
       </nav>
     </header>
-    <div class="profileContainerScroll">
+    <main>
       <div
         class="h-auto w-full border-b-2 border-slate-300 bg-slate-200 shadow-sm pt-3"
       >
@@ -192,6 +192,7 @@
         </div>
       </div>
     </div>
+    </main>
     <footer>
       <div
         class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
@@ -226,7 +227,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </main>
     </footer>
   </body>
 </html>
