--- a/src/main/resources/templates/updateCollection.html
+++ b/src/main/resources/templates/updateCollection.html
@@ -15,136 +15,140 @@
     <link rel="stylesheet" href="/css/output.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <ul class="flex justify-between items-center w-full">
-          <li class="flex items-center">
-            <a id="backButton">
-              <span>&#8592;</span>
-            </a>
-          </li>
-          <li>
-            <a href="/profile">
+      <header>
+        <nav class="navbar">
+          <ul class="flex justify-between items-center w-full">
+            <li class="flex items-center">
+              <a id="backButton">
+                <span>&#8592;</span>
+              </a>
+            </li>
+            <li>
+              <a href="/profile">
+                <img
+                  class="h-7 w-7 rounded-full bg-white"
+                  th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                  alt="Profile Picture"
+                />
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <div class="bg-white pb-4 h-full overflow-y-auto">
+          <div class="collectionHeader bg-slate-100">
+            <span class="text-sm font-semibold text-slate-600">Update Collection</span>
+          </div>
+
+          <div class="bg-white pb-4">
+            <div class="flex flex-col w-full items-center justify-center">
               <img
-                class="h-7 w-7 rounded-full bg-white"
-                th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
-                alt="Profile Picture"
+                class="aspect-square w-full bg-white"
+                id="previewImage"
+                th:src="${collection?.imageUrl != null ? collection.imageUrl : '/images/collection_image.png'}"
+
+                alt="Collection Image"
               />
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <div class="bg-white pb-4 h-full overflow-y-auto">
-      <div class="collectionHeader bg-slate-100">
-        <span class="text-sm font-semibold text-slate-600">Update Collection</span>
-      </div>
+              <a href="#" id="triggerUpload" class="mt-2">
+                <span class="text-sm font-semibold text-blue-500"
+                  >Update Collection Cover</span
+                >
+              </a>
+            </div>
+            <!-- ERROR / SUCCESS -->
+            <div class="errorBox">
+              <!-- SUCCESS MESSAGE -->
+              <div
+                id="successMessageDiv"
+                th:if="${message}"
+                th:text="${message}"
+                style="color: green"
+              ></div>
+              <!-- ERROR MESSAGE -->
+              <div
+                id="errorMessageDiv"
+                th:if="${error}"
+                th:text="${error}"
+                style="color: red"
+              ></div>
+            </div>
 
-      <div class="bg-white pb-4">
-        <div class="flex flex-col w-full items-center justify-center">
-          <img
-            class="aspect-square w-full bg-white"
-            id="previewImage"
-            th:src="${collection?.imageUrl != null ? collection.imageUrl : '/images/collection_image.png'}"
+            <form 
+            class="flex flex-col w-full items-center justify-center px-2 bg-white"
+            th:action="@{/update-collection/{id}(id=${collection.id})}" 
+            method="post" 
+            enctype="multipart/form-data">
+              <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+              <!-- File Upload Field -->
 
-            alt="Collection Image"
-          />
-          <a href="#" id="triggerUpload" class="mt-2">
-            <span class="text-sm font-semibold text-blue-500"
-              >Update Collection Cover</span
+              <input
+                type="file"
+                id="hiddenFileInput"
+                name="collectionImage"
+                style="display: none"
+                accept="image/*"
+              />
+
+              <!-- Title Field -->
+              <div class="flex flex-col w-full h-auto justify-center items-between">
+                <div class="labelInputBox w-full">
+                  <label class="label" for="title">Title:</label>
+                  <input
+                    class="input w-full"
+                    type="text"
+                    id="collectionTitle"
+                    name="title"
+                    th:value="${collection?.title}"
+                    placeholder="Title"
+                  />
+                </div>
+
+              <!-- Caption Field -->
+              <div class="flex flex-col w-full h-auto justify-center items-between">
+                <div class="labelInputBox w-full">
+                  <label class="label" for="caption">Caption:</label>
+                  <input
+                    class="input w-full"
+                    type="text"
+                    id="caption"
+                    name="caption"
+                    th:value="${collection?.caption}"
+                    placeholder="Caption"
+                  />
+                </div>
+
+                <!-- Submit Button -->
+                <div class="flex flex-row justify-center items-center">
+                  <button
+                    class="deleteButton bg-blue-600 hover:bg-blue-800"
+                    type="submit"
+                  >
+                    Update Collection
+                  </button>
+                </div>
+              </div>
+            </form>
+            <form
+            class="flex flex-col w-full items-center justify-center px-2 bg-white"
+            th:action="@{/delete-collection/{id}(id=${collection.id})}"
+            method="post"
             >
-          </a>
-        </div>
-        <!-- ERROR / SUCCESS -->
-        <div class="errorBox">
-          <!-- SUCCESS MESSAGE -->
-          <div
-            id="successMessageDiv"
-            th:if="${message}"
-            th:text="${message}"
-            style="color: green"
-          ></div>
-          <!-- ERROR MESSAGE -->
-          <div
-            id="errorMessageDiv"
-            th:if="${error}"
-            th:text="${error}"
-            style="color: red"
-          ></div>
-        </div>
-
-        <form 
-        class="flex flex-col w-full items-center justify-center px-2 bg-white"
-        th:action="@{/update-collection/{id}(id=${collection.id})}" 
-        method="post" 
-        enctype="multipart/form-data">
-          <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-          <!-- File Upload Field -->
-
-          <input
-            type="file"
-            id="hiddenFileInput"
-            name="collectionImage"
-            style="display: none"
-            accept="image/*"
-          />
-
-          <!-- Title Field -->
-          <div class="flex flex-col w-full h-auto justify-center items-between">
-            <div class="labelInputBox w-full">
-              <label class="label" for="title">Title:</label>
-              <input
-                class="input w-full"
-                type="text"
-                id="collectionTitle"
-                name="title"
-                th:value="${collection?.title}"
-                placeholder="Title"
-              />
-            </div>
-
-          <!-- Caption Field -->
-          <div class="flex flex-col w-full h-auto justify-center items-between">
-            <div class="labelInputBox w-full">
-              <label class="label" for="caption">Caption:</label>
-              <input
-                class="input w-full"
-                type="text"
-                id="caption"
-                name="caption"
-                th:value="${collection?.caption}"
-                placeholder="Caption"
-              />
-            </div>
-
-            <!-- Submit Button -->
-            <div class="flex flex-row justify-center items-center">
+              <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+              <div class="flex flex-row justify-center items-center">
               <button
-                class="deleteButton bg-blue-600 hover:bg-blue-800"
+                class="deleteButton bg-red-600 hover:bg-red-800"
                 type="submit"
+                onclick="return confirm('Are you sure you want to delete this collection? This action cannot be undone.');"
               >
-                Update Collection
+                Delete Collection
               </button>
             </div>
-          </div>
-        </form>
-        <form
-        class="flex flex-col w-full items-center justify-center px-2 bg-white"
-        th:action="@{/delete-collection/{id}(id=${collection.id})}"
-        method="post"
-      >
-        <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-        <div class="flex flex-row justify-center items-center">
-        <button
-          class="deleteButton bg-red-600 hover:bg-red-800"
-          type="submit"
-          onclick="return confirm('Are you sure you want to delete this collection? This action cannot be undone.');"
-        >
-          Delete Collection
-        </button>
+          </form>
+        </div>
       </div>
-      </form>
-      </div>
-    </div>
+    </main>
+    <footer class="bg-slate-100">
+    </footer>
   </body>
 </html>
