--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="/css/output.css" />
   </head>
-  <body id="scrollablePage">
+  <body>
     <header>
       <nav class="navbar">
         <ul class="flex justify-between items-center w-full">
@@ -33,141 +33,145 @@
         </ul>
       </nav>
     </header>
-    <div class="bg-white pb-4 h-full overflow-y-auto">
-      <div class="collectionHeader bg-slate-100">
-        <span class="text-sm font-semibold text-slate-600">Update Item</span>
-      </div>
-      <div class="flex flex-col w-full items-center justify-center">
-        <img
-          class="aspect-square w-full bg-white"
-          id="previewImage"
-          th:src="${item?.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
-          alt="Collection Image"
-        />
-        <a href="#" id="triggerUpload" class="mt-2">
-          <span class="text-sm font-semibold text-blue-500">
-            Update Item Image
-          </span>
-        </a>
-      </div>
-      <!-- ERROR / SUCCESS -->
-      <div class="errorBox">
-        <!-- SUCCESS MESSAGE -->
-        <div
-          id="successMessageDiv"
-          th:if="${message}"
-          th:text="${message}"
-          style="color: green"
-        ></div>
-        <!-- ERROR MESSAGE -->
-        <div
-          id="errorMessageDiv"
-          th:if="${error}"
-          th:text="${error}"
-          style="color: red"
-        ></div>
-      </div>
-
-      <div class="scrollable-container h-100vh">
-        <form
-          class="flex flex-col w-full items-center justify-center px-2"
-          th:action="@{/update-item/{id}(id=${item.id})}"
-          method="post"
-          enctype="multipart/form-data"
-        >
-          <input type="hidden" name="collectionId" th:value="${collectionId}" />
-          <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-
-          <!-- File Upload Field -->
-          <input
-            type="file"
-            id="hiddenFileInput"
-            name="itemImage"
-            style="display: none"
-            accept="image/*"
+    <main>
+      <div class="bg-white pb-4 h-full overflow-y-auto">
+        <div class="collectionHeader bg-slate-100">
+          <span class="text-sm font-semibold text-slate-600">Update Item</span>
+        </div>
+        <div class="flex flex-col w-full items-center justify-center">
+          <img
+            class="aspect-square w-full bg-white"
+            id="previewImage"
+            th:src="${item?.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
+            alt="Collection Image"
           />
+          <a href="#" id="triggerUpload" class="mt-2">
+            <span class="text-sm font-semibold text-blue-500">
+              Update Item Image
+            </span>
+          </a>
+        </div>
+        <!-- ERROR / SUCCESS -->
+        <div class="errorBox">
+          <!-- SUCCESS MESSAGE -->
+          <div
+            id="successMessageDiv"
+            th:if="${message}"
+            th:text="${message}"
+            style="color: green"
+          ></div>
+          <!-- ERROR MESSAGE -->
+          <div
+            id="errorMessageDiv"
+            th:if="${error}"
+            th:text="${error}"
+            style="color: red"
+          ></div>
+        </div>
 
-          <!-- Title Field -->
-          <div class="labelInputBox w-full">
-            <label class="label" for="title">Title:</label>
+        <div class="scrollable-container h-100vh">
+          <form
+            class="flex flex-col w-full items-center justify-center px-2"
+            th:action="@{/update-item/{id}(id=${item.id})}"
+            method="post"
+            enctype="multipart/form-data"
+          >
+            <input type="hidden" name="collectionId" th:value="${collectionId}" />
+            <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+
+            <!-- File Upload Field -->
             <input
-              class="input w-full"
-              type="text"
-              id="itemTitle"
-              name="title"
-              th:value="${item?.title}"
-              placeholder="Title"
+              type="file"
+              id="hiddenFileInput"
+              name="itemImage"
+              style="display: none"
+              accept="image/*"
             />
-          </div>
 
-          <!-- Description Field -->
-          <div class="labelInputBox w-full">
-            <label class="label" for="description">Description:</label>
-            <textarea
-              class="input w-full"
-              id="description"
-              name="description"
-              th:text="${item?.description}"
-              placeholder="Description"
-              rows="6"
-              maxlength="255"
-            ></textarea>
-          </div>
+            <!-- Title Field -->
+            <div class="labelInputBox w-full">
+              <label class="label" for="title">Title:</label>
+              <input
+                class="input w-full"
+                type="text"
+                id="itemTitle"
+                name="title"
+                th:value="${item?.title}"
+                placeholder="Title"
+              />
+            </div>
 
-          <!-- Item Link Field -->
-          <div class="labelInputBox w-full">
-            <label class="label" for="itemLink">Item Link:</label>
-            <input
-              class="input w-full"
-              type="text"
-              id="itemLink"
-              name="itemLink"
-              th:value="${item?.itemLink}"
-              placeholder="http://example.com"
-            />
-          </div>
+            <!-- Description Field -->
+            <div class="labelInputBox w-full">
+              <label class="label" for="description">Description:</label>
+              <textarea
+                class="input w-full"
+                id="description"
+                name="description"
+                th:text="${item?.description}"
+                placeholder="Description"
+                rows="6"
+                maxlength="255"
+              ></textarea>
+            </div>
 
-          <!-- Caption Field -->
-          <div class="labelInputBox w-full">
-            <label class="label" for="caption">Caption:</label>
-            <input
-              class="input w-full"
-              type="text"
-              id="caption"
-              name="caption"
-              th:value="${item?.caption}"
-              placeholder="Caption"
-            />
-          </div>
+            <!-- Item Link Field -->
+            <div class="labelInputBox w-full">
+              <label class="label" for="itemLink">Item Link:</label>
+              <input
+                class="input w-full"
+                type="text"
+                id="itemLink"
+                name="itemLink"
+                th:value="${item?.itemLink}"
+                placeholder="http://example.com"
+              />
+            </div>
 
-          <!-- Submit Button -->
-          <div class="flex flex-row justify-center items-center">
-            <button
-              class="deleteButton bg-blue-600 hover:bg-blue-800"
-              type="submit"
-            >
-              Update Item
-            </button>
-          </div>
-        </form>
-        <form
-          class="flex flex-col w-full items-center justify-center px-2 bg-white"
-          th:action="@{/delete-item/{id}(id=${item.id})}"
-          method="post"
-          enctype="multipart/form-data"
-        >
-          <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-          <div class="flex flex-row justify-center items-center">
-            <button
-              class="deleteButton bg-red-600 hover:bg-red-800"
-              type="submit"
-              onclick="return confirm('Are you sure you want to delete this item? This action cannot be undone.');"
-            >
-              Delete Item
-            </button>
-          </div>
-        </form>
+            <!-- Caption Field -->
+            <div class="labelInputBox w-full">
+              <label class="label" for="caption">Caption:</label>
+              <input
+                class="input w-full"
+                type="text"
+                id="caption"
+                name="caption"
+                th:value="${item?.caption}"
+                placeholder="Caption"
+              />
+            </div>
+
+            <!-- Submit Button -->
+            <div class="flex flex-row justify-center items-center">
+              <button
+                class="deleteButton bg-blue-600 hover:bg-blue-800"
+                type="submit"
+              >
+                Update Item
+              </button>
+            </div>
+          </form>
+          <form
+            class="flex flex-col w-full items-center justify-center px-2 bg-white"
+            th:action="@{/delete-item/{id}(id=${item.id})}"
+            method="post"
+            enctype="multipart/form-data"
+          >
+            <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+            <div class="flex flex-row justify-center items-center">
+              <button
+                class="deleteButton bg-red-600 hover:bg-red-800"
+                type="submit"
+                onclick="return confirm('Are you sure you want to delete this item? This action cannot be undone.');"
+              >
+                Delete Item
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
+    </main>
+    <footer class="bg-slate-100">
+    </footer>
   </body>
 </html>
