--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -28,7 +28,7 @@
         </ul>
       </nav>
     </header>
-    <div class="profileContainerScroll">
+    <main class="overflow-auto">
       <div
         class="h-auto w-full border-b-2 border-slate-300 bg-slate-200 shadow-sm pt-3"
       >
@@ -159,7 +159,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer>
       <div
         class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
